--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "chalk": "^4.1.0",
         "mocha": "^8.0.1",
         "ora": "^4.0.4",
-        "puppeteer": "^4.0.0"
+        "puppeteer": "^4.0.0",
+        "lodash":"^4.17.19"
     },
     "description": "基于 puppeteer 的中国行政区域抓取爬虫(省市区)",
     "scripts": {
